--- a/src/pages/jogador-details/jogador-details.html
+++ b/src/pages/jogador-details/jogador-details.html
@@ -50,22 +50,21 @@
         <h2 class="lbl-nome-bold">Times com esse jogador</h2>
       </ion-item>
     </ion-row>
-    <ion-list class="border-bottom">
-      <ion-row align-items-center *ngFor="time of timesComAtleta">
-        <ion-col col-6>
-          <ion-item class="time-item item-escudo">
-            <ion-thumbnail item-start class="time-escudo">
-              <img id="escudo" src="{{time.url_escudo_svg}}">
-              <img class="time-perfil-foto" src="{{time.foto_perfil}}">
-            </ion-thumbnail>
-            <h3 class='lbl-nome lbl-nome-bold'>{{time.nome}}</h3>
-            <p class="lbl-nome">{{time.nome_cartola}}</p>
-          </ion-item>
-        </ion-col>
-
-      </ion-row>
+    <ion-list>
+      <ion-grid>
+        <ion-row align-items-center id="border-bottom-row" *ngFor="let time of timesComAtleta">
+          <ion-col col-6>
+            <ion-item class="time-item item-escudo">
+              <ion-thumbnail item-start class="time-escudo">
+                <img id="escudo" src="{{time.url_escudo_svg}}">
+                <img class="time-perfil-foto" src="{{time.foto_perfil}}">
+              </ion-thumbnail>
+              <h3 class='lbl-nome lbl-nome-bold'>{{time.nome}}</h3>
+              <p class="lbl-nome">{{time.nome_cartola}}</p>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-list>
-
-
   </ion-grid>
 </ion-content>
