Revert "analisar tudo depois"
This reverts commit a27b7c97e8de8164ac21b4e668b72db7e2044002.

--- a/src/pages/jogador-details/jogador-details.html
+++ b/src/pages/jogador-details/jogador-details.html
@@ -23,16 +23,11 @@
       </ion-item>
     </ion-row>
     <ion-row>
-      <ion-item class="no-border-bottom" *ngIf="atleta.scout">
+      <ion-item class="no-border-bottom">
         <h2 class="lbl-nome-bold">Scout</h2>
       </ion-item>
     </ion-row>
-    <ion-row>
-      <ion-item *ngIf="!atleta.scout">
-        <h2 class="lbl-nome-bold">Jogador não pontuou</h2>
-      </ion-item>
-    </ion-row>
-    <ion-row margin-bottom *ngIf="atleta.scout">
+    <ion-row margin-bottom>
       <ion-col col-5 offset-1 text-center align-self-center class="lbl-nome-bold">
         Ação
       </ion-col>
@@ -40,7 +35,7 @@
         Pontos
       </ion-col>
     </ion-row>
-    <ion-list class="border-bottom" *ngIf="atleta.scout">
+    <ion-list class="border-bottom">
       <ion-row align-items-center *ngFor="let scout of atleta.scout">
         <ion-col col-6 offset-1 text-left>
           <h3 class="lbl-nome-bold scout-name">{{scout.quantidade}} {{scout.acao}}</h3>
@@ -57,9 +52,9 @@
     </ion-row>
     <ion-list>
       <ion-grid>
-        <ion-row align-items-center *ngFor="let time of timesComAtleta" (click)="timeDetail(time)">
+        <ion-row align-items-center id="border-bottom-row" *ngFor="let time of timesComAtleta" (click)="timeDetail(time)">
           <ion-col col-6>
-            <ion-item class="time-item item-escudo no-border-bottom">
+            <ion-item class="time-item item-escudo">
               <ion-thumbnail item-start class="time-escudo">
                 <img id="escudo" src="{{time.url_escudo_svg}}">
                 <img class="time-perfil-foto" src="{{time.foto_perfil}}">
@@ -68,12 +63,6 @@
               <p class="lbl-nome">{{time.nome_cartola}}</p>
             </ion-item>
           </ion-col>
-          <ion-col>
-            <ion-item class="time-item">
-              <p class="lbl-nome lbl-nome-bold" text-right [ngStyle]="{'color': time.pontos.rodada>0? 'green' : 'red'}">{{time.pontos.rodada}}</p>
-            </ion-item>
-          </ion-col>
-
         </ion-row>
       </ion-grid>
     </ion-list>
