--- a/src/pages/jogadores/jogadores.html
+++ b/src/pages/jogadores/jogadores.html
@@ -1,16 +1,14 @@
-<!--
-  Generated template for the JogadoresPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>jogadores</ion-title>
+  <ion-navbar color="primary">
+    <button ion-button icon-only menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Jogadores
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
+
 
 
 <ion-content padding>
