--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,20 @@
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar color="primary" id='menu_header'>
+      <ion-title postion="bottom">Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item *ngIf="!userLogged">
+        Login
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+<ion-nav #content></ion-nav>
+
+
 <ion-tabs>
   <ion-tab [root]="tab1Root" [tabTitle]="tab1Title"></ion-tab>
   <ion-tab [root]="tab2Root" [tabTitle]="tab2Title"></ion-tab>
