--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content padding class="vertical-align-content" *ngIf="teamInfo">
-  <ion-row justify-content-center >
+  <ion-row justify-content-center>
     <ion-img id="escudo_svg" src="{{teamInfo.url_escudo_svg}}"></ion-img>
   </ion-row>
 
@@ -21,9 +21,8 @@
   </ion-row>
 </ion-content>
 
-<ion-content padding class="vertical-align-content" *ngIf='!userLogged'>
-  <ion-row justify-content-center *ngIf='!userLogged'>
+<ion-content padding class="vertical-align-content" *ngIf='!userDataControll.isUserLogged'>
+  <ion-row justify-content-center>
     <button ion-button outline large text-uppercase (click)="openPage('LoginPage')">Login</button>
   </ion-row>
 </ion-content>
-
