--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -6,14 +6,13 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item *ngIf="!userLogged">
+      <button ion-item *ngIf="!userDataControll.isUserLogged">
         Login
       </button>
     </ion-list>
   </ion-content>
 </ion-menu>
 <ion-nav #content></ion-nav>
-
 
 <ion-tabs>
   <ion-tab [root]="tab1Root" [tabTitle]="tab1Title"></ion-tab>
