--- a/src/pages/jogos/jogos.html
+++ b/src/pages/jogos/jogos.html
@@ -9,29 +9,42 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content *ngIf='partidasLoaded'>
-  
-    <ion-row id="border-bottom-row" *ngFor='let partida of partidas' justify-content-center>
-      <ion-col col-5>
-        <ion-item class="clube-item clube-escudo">
-          <!-- <ion-thumbnail item-end>
-            <img id="escudo" src="{{clubes[partida.clube_casa_id].escudos['60x60']}}">
-          </ion-thumbnail> -->
-          <p text-right>{{clubes[partida.clube_casa_id].nome}}</p>
-        </ion-item>
-      </ion-col>
-      <ion-col col-2>
-        <ion-item>
-          <p text-center>X</p>
-        </ion-item>
-      </ion-col>
-      <ion-col col-5>
-        <ion-item class="clube-item clube-escudo">
-          <!-- <ion-thumbnail item-start>
-            <img id="escudo" src="{{clubes[partida.clube_visitante_id].escudos['60x60']}}">
-          </ion-thumbnail> -->
-          <p text-left>{{clubes[partida.clube_visitante_id].nome}}</p>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+<ion-content>
+  <ion-grid *ngIf='partidasLoaded'>
+    <ion-list>
+      <ion-item *ngFor='let partida of partidas' class="partida-item">
+        <ion-row align-items-end>
+          <ion-col col-12>
+            <h3 class="lbl-nome-bold" text-center>{{partida.partida_data | date :'dd/MM/yyyy hh:mm'}}</h3>
+          </ion-col>
+        </ion-row>
+        <ion-row justify-content-center align-items-center>
+          <ion-col class="display-grid" col-4>
+            <img class="clube-escudo" id="clube-casa-escudo" src="{{clubes[partida.clube_casa_id].escudos['60x60']}}">
+            <p text-center class="lbl-nome-bold">{{clubes[partida.clube_casa_id].nome}}</p>
+          </ion-col>
+          <ion-col col-1>
+            <p text-center class="lbl-nome-bold">{{partida.placar_oficial_mandante||0}}</p>
+          </ion-col>
+          <ion-col col-2>
+            <p text-center class="lbl-nome-bold">X</p>
+          </ion-col>
+          <ion-col col-1>
+            <p text-center class="lbl-nome-bold">{{partida.placar_visitante_mandante||0}}</p>
+          </ion-col>
+          <ion-col class="display-grid" col-4>
+            <img class="clube-escudo" id="clube-visitante-escudo" src="{{clubes[partida.clube_visitante_id].escudos['60x60']}}">
+            <p text-center class="lbl-nome-bold">{{clubes[partida.clube_visitante_id].nome}}</p>
+          </ion-col>
+        </ion-row>
+        <ion-row align-items-end>
+          <ion-col col-12>
+            <h3 class="lbl-nome-bold" text-center>{{partida.local}}</h3>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+
+    </ion-list>
+  </ion-grid>
+
 </ion-content>
