--- a/src/pages/jogos/jogos.html
+++ b/src/pages/jogos/jogos.html
@@ -15,7 +15,7 @@
       <ion-item *ngFor='let partida of partidas' class="partida-item">
         <ion-row align-items-end>
           <ion-col col-12>
-            <h3 class="lbl-nome-bold" text-center>{{partida.partida_data | date :'dd/MM/yyyy hh:mm'}}</h3>
+            <h3 class="lbl-nome-bold" text-center>{{partida.partida_data | date :'dd/MM/yyyy HH:mm'}}</h3>
           </ion-col>
         </ion-row>
         <ion-row justify-content-center align-items-center>
