--- a/src/pages/jogador-details/jogador-details.html
+++ b/src/pages/jogador-details/jogador-details.html
@@ -18,7 +18,7 @@
     </ion-row>
     <ion-row>
       <ion-item>
-        <h2 text-uppercase>{{atleta.apelido}}</h2>
+        <h2 id="nome-jogador" text-uppercase>{{atleta.apelido}}</h2>
         <p text-center>{{posicao.nome}}</p>
       </ion-item>
     </ion-row>
