--- a/src/pages/time-detail/time-detail.html
+++ b/src/pages/time-detail/time-detail.html
@@ -61,7 +61,7 @@
   </ion-grid>
   <ion-list>
     <ion-grid>
-      <ion-row align-items-center id="border-bottom-row" *ngFor="let atleta of time.atletas" (click)="viewTimes(atleta)">
+      <ion-row align-items-center id="border-bottom-row" *ngFor="let atleta of time.atletas" (click)="viewTimes(atleta)" [ngStyle]="{'opacity': (!atleta.scoutAbreviado? '0.5' : '1')}">
         <ion-col class="jogador-container" col-7>
           <ion-item>
             <ion-avatar item-start class="foto-jogador-container">
@@ -77,8 +77,8 @@
               </svg> -->
             </ion-avatar>
             <h3 text-left class='font-13px lbl-nome-bold'>{{atleta.apelido}}
-              <svg *ngIf="atleta.atleta_id==time.capitao_id" class="jogador-capitao-icon" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 29 29" id="time--icon-capitao" width="100%" height="100%">
+              <svg *ngIf="atleta.atleta_id==time.capitao_id" class="jogador-capitao-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"
+                id="time--icon-capitao" width="100%" height="100%">
                 <g fill="none" fill-rule="evenodd">
                   <circle cx="14" cy="14" r="14" transform="translate(.103 .52)" fill="#FF7400"></circle>
                   <path d="M14.705 21.569c3.332 0 5.132-1.925 6.022-3.705l-3.063-1.448c-.455 1.097-1.635 2.007-2.96 2.007-2.255 0-3.848-1.738-3.848-3.994 0-2.256 1.593-3.994 3.849-3.994 1.324 0 2.504.91 2.96 2.007l3.062-1.448c-.91-1.821-2.69-3.705-6.022-3.705-4.243 0-7.471 2.877-7.471 7.14 0 4.243 3.228 7.14 7.47 7.14z"
@@ -86,14 +86,13 @@
                 </g>
               </svg>
             </h3>
-
             <p text-left class='lbl-nome-09-rem lbl-nome-bold' text-uppercase>{{getPosicao(atleta.posicao_id)}}</p>
           </ion-item>
         </ion-col>
         <ion-col class="jogador-container" col-5>
           <ion-item>
             <h3 text-center class='lbl-nome-bold font-13px' [ngStyle]="{'color': (atleta.pontos_num>0? 'green' : (atleta.pontos_num<0?'red':''))}">{{atleta.atleta_id==time.capitao_id?(atleta.pontos_num*2):atleta.pontos_num}}</h3>
-            <p text-center class='lbl-nome-09-rem lbl-nome-bold' *ngIf='scoutOk && atleta.posicao_id != 6'>
+            <p text-center class='lbl-nome-09-rem lbl-nome-bold' *ngIf='atleta.posicao_id != 6'>
               <span *ngFor="let scout of atleta.scoutAbreviado; let i = index" [ngStyle]="{'color': scout.color}">{{scout.acao}}
                 <span [ngStyle]="{'color': '#666'}" [innerHtml]="(i+1)<atleta.scoutAbreviado.length?', ':''"></span>
               </span>
