--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<!-- <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar color="primary" id='menu_header'>
       <ion-title postion="bottom">Menu</ion-title>
@@ -12,7 +12,7 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-<ion-nav #content></ion-nav>
+<ion-nav #content></ion-nav> -->
 
 <ion-tabs>
   <ion-tab [root]="tab1Root" [tabTitle]="tab1Title"></ion-tab>
