--- a/src/pages/jogadores/jogadores.html
+++ b/src/pages/jogadores/jogadores.html
@@ -9,8 +9,48 @@
   </ion-navbar>
 </ion-header>
 
+<ion-content>
+  <ion-refresher (ionRefresh)="doRefresh($event)" pullMin="60" pullMax="120">
+    <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Puxe para atualizar..." refreshingSpinner="bubbles" refreshingText="Atualizando...">
+    </ion-refresher-content>
+  </ion-refresher>
+  <ion-grid *ngIf='partidasLoaded'>
+    <ion-list>
+      <ion-item *ngFor='let partida of partidas' class="partida-item">
+        <ion-row align-items-end>
+          <ion-col col-12>
+            <h3 class="lbl-nome-bold" text-center>{{partida.partida_data | date :'dd/MM/yyyy HH:mm'}}</h3>
+          </ion-col>
+        </ion-row>
+        <ion-row justify-content-center align-items-center>
+          <ion-col class="display-grid" col-4>
+            <img class="clube-escudo" id="clube-casa-escudo" src="{{clubes[partida.clube_casa_id].escudos['60x60']}}">
+            <p text-center class="lbl-nome-bold">{{clubes[partida.clube_casa_id].nome}}</p>
+          </ion-col>
+          <ion-col col-1>
+            <p text-center class="lbl-nome-bold">{{partida.placar_oficial_mandante||0}}</p>
+          </ion-col>
+          <ion-col col-2>
+            <p text-center class="lbl-nome-bold">X</p>
+          </ion-col>
+          <ion-col col-1>
+            <p text-center class="lbl-nome-bold">{{partida.placar_oficial_visitante||0}}</p>
+          </ion-col>
+          <ion-col class="display-grid" col-4>
+            <img class="clube-escudo" id="clube-visitante-escudo" src="{{clubes[partida.clube_visitante_id].escudos['60x60']}}">
+            <p text-center class="lbl-nome-bold">{{clubes[partida.clube_visitante_id].nome}}</p>
+          </ion-col>
+        </ion-row>
+        <ion-row align-items-end>
+          <ion-col col-12>
+            <h3 class="lbl-nome-bold" text-center>{{partida.local}}</h3>
+          </ion-col>
+        </ion-row>
+      </ion-item>
 
-
-<ion-content padding>
+    </ion-list>
+  </ion-grid>
 
 </ion-content>
+
+
