--- a/src/pages/time-detail/time-detail.html
+++ b/src/pages/time-detail/time-detail.html
@@ -69,7 +69,7 @@
           <ion-item>
             <ion-avatar item-start class="foto-jogador-container">
               <img class="foto-jogador no-radius" src="{{atleta.foto.replace('FORMATO', '140x140')}}">
-              <img class="jogador-escudo-time no-radius" src="{{time.clubes[atleta.clube_id].escudos['60x60']}}">
+              <img class="jogador-escudo-time no-radius" src="{{getTimeEscudo(atleta.clube_id)}}">
               <svg *ngIf="atleta.atleta_id==time.capitao_id" class="jogador-capitao-icon no-radius" xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 29 29" id="time--icon-capitao" width="100%" height="100%">
                 <g fill="none" fill-rule="evenodd">
@@ -87,7 +87,7 @@
           <ion-item>
             <h3 text-center class='lbl-nome-bold font-13px' [ngStyle]="{'color': (atleta.pontos_num>0? 'green' : (atleta.pontos_num<0?'red':''))}">{{atleta.atleta_id==time.capitao_id?(atleta.pontos_num*2):atleta.pontos_num}}</h3>
             <p text-center class='lbl-nome-09-rem lbl-nome-bold' *ngIf='atleta.posicao_id != 6'>
-              <span *ngFor="let scout of atleta.scoutAbreviado; let i = index" [ngStyle]="{'color': scout.color}">{{scout.acao}}
+              <span *ngFor="let scout of atleta.scoutAbreviado" [ngStyle]="{'color': scout.color}">{{scout.acao}}
                 <span [ngStyle]="{'color': '#666'}" [innerHtml]="(i+1)<atleta.scoutAbreviado.length?', ':''"></span>
               </span>
             </p>
