--- a/src/pages/time-detail/time-detail.html
+++ b/src/pages/time-detail/time-detail.html
@@ -87,7 +87,7 @@
           <ion-item>
             <h3 text-center class='lbl-nome-bold font-13px' [ngStyle]="{'color': (atleta.pontos_num>0? 'green' : (atleta.pontos_num<0?'red':''))}">{{atleta.atleta_id==time.capitao_id?(atleta.pontos_num*2):atleta.pontos_num}}</h3>
             <p text-center class='lbl-nome-09-rem lbl-nome-bold' *ngIf='atleta.posicao_id != 6'>
-              <span *ngFor="let scout of atleta.scoutAbreviado" [ngStyle]="{'color': scout.color}">{{scout.acao}}
+              <span *ngFor="let scout of atleta.scoutAbreviado; let i = index;" [ngStyle]="{'color': scout.color}">{{scout.acao}}
                 <span [ngStyle]="{'color': '#666'}" [innerHtml]="(i+1)<atleta.scoutAbreviado.length?', ':''"></span>
               </span>
             </p>
